--- a/00/index.html
+++ b/00/index.html
@@ -18,7 +18,7 @@
 			<ul>
 				<li><a href="#uno">Inicio</a></li>
 				<li><a href="#home">Bestbus</a></li>
-				<li><a href="#galeria">Galeria</a></li>
+				<li><a href="#gale">Galeria</a></li>
 				<li><a href="#clientes">Clientes</a></li>
 				<li><a href="#carta">Contacto</a></li>
 			</ul>
@@ -48,8 +48,8 @@
 		    </li>
 		  </ul>
 	</div>
-		<h2>Bestbus</h2>
-		<section id="home" class="cuadro">
+		<h2 id="home">Bestbus</h2>
+		<section  class="cuadro">
 			<p class="parrafo"> 
 				Best Bus es la línea de transporte de personal de Grupo Turicún,nacimos con Cancún y hemos crecido a la par de su desarrollo.
 			</p>
@@ -69,7 +69,7 @@
 				La visión  que tenemos es ser una empresa líder en el transporte de servicios turísticos y transporte de personal, y en servicios especiales en el mercado  interno, teniendo los autobuses de vanguardia y así, cumplir con los  requerimientos y necesidades de nuestros clientes.
 			</p>
 		</section>
-	<h2>Galeria</h2>
+	<h2 id="gale">Galeria</h2>
 	<section id="galeria" class="cuadro">
 					<div class="galeria">
 						<img src="img/1.jpg" alt="image1"/>
@@ -82,6 +82,9 @@
 					</div>
 					<div class="galeria">
 						<img src="img/4.jpg" alt="image1"/>
+					</div>
+					<div class="galeria">
+						<img src="img/5.jpg" alt="image1"/>
 					</div>
 				
 		</section>
@@ -139,41 +142,6 @@
 	</footer>
 	<script src="js/jquery.js"></script>
 	<script src="js/responsiveslides.js"></script>
-	<script >
-		 $(function() {
-   	 		$(".rslides").responsiveSlides({
-   	 			auto:true,
-   	 			speed:400,
-   	 		});
-  			});
-	</script>
-	<script>
-	$("a").on("click",function(){
-   if(this.hash){
-      //console.log($(this).attr('href'));
-      $("html body").animate({"scrollTop":$($(this).attr('href')).offset().top-82},1400);
-      return false;
-         }
-});
-
-	$(document).ready(function(){
-	   var $win = window;
-	   var $pos = 40;
-
-	   $(window).scroll(function(){
-	      if($(this).scrollTop() > $pos){
-	         $("a.to-top").css("opacity","1");
-	         $("header").css("box-shadow","2px 5px 20px rgb(14,62,146,0.5)");
-	      }else{
-	         $("a.to-top").css("opacity","0");
-	         $("header").css("box-shadow","1px 2px 1px transparent");
-	      }
-	   })
-	});
-
-	$(".to-top").on("click",function(){
-	   $("html, body").animate({scrollTop:0},"fast");
-	});
-	</script>
+	<script src="js/funciones.js" ></script>
 </body>
 </html>
