--- a/00/index.html
+++ b/00/index.html
@@ -86,6 +86,9 @@
 					<div class="galeria">
 						<img src="img/5.jpg" alt="image1"/>
 					</div>
+					<div class="galeria">
+						<img src="img/6.jpg" alt="image1"/>
+					</div>
 				
 		</section>
 		
