--- a/00/index.html
+++ b/00/index.html
@@ -137,10 +137,8 @@
 	<p>Dirección: Av 20 de Noviembre Mz 5 Lt 6 SM 77, Cancún, Q Roo. México</p>
 </form>
 
-		<!--<iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com.mx/maps?f=d&amp;source=s_d&amp;saddr=21.165103,-86.8381&amp;daddr=&amp;hl=es-419&amp;geocode=&amp;sll=21.164838,-86.837745&amp;sspn=0.002926,0.005284&amp;mra=mift&amp;mrsp=0&amp;sz=18&amp;ie=UTF8&amp;t=m&amp;ll=21.164838,-86.837745&amp;spn=0.002926,0.005284&amp;output=embed"></iframe><br /><small><a href="https://www.google.com.mx/maps?f=d&amp;source=embed&amp;saddr=21.165103,-86.8381&amp;daddr=&amp;hl=es-419&amp;geocode=&amp;sll=21.164838,-86.837745&amp;sspn=0.002926,0.005284&amp;mra=mift&amp;mrsp=0&amp;sz=18&amp;ie=UTF8&amp;t=m&amp;ll=21.164838,-86.837745&amp;spn=0.002926,0.005284" style="color:#0000FF;text-align:left" target="_blank">Ver mapa más grande </a></small>
-		-->
-	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m8!1m3!1d3720.0298533847604!2d-86.82042700000001!3d21.190973!3m2!1i1024!2i768!4f13.1!4m7!1i0!3e6!4m0!4m3!3m2!1d21.190970699999998!2d-86.8201646!5e0!3m2!1ses!2smx!4v1394555754647" width="600" height="450" frameborder="0" style="border:0"></iframe>
-	<!--<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3720.0298533847604!2d-86.82042700000001!3d21.190973!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2smx!4v1394555862136" width="600" height="450" frameborder="0" style="border:0"></iframe>-->
+	<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3720.0298533847604!2d-86.82042700000001!3d21.190973!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2smx!4v1394555862136" width="600" height="450" frameborder="0" style="border:0"></iframe>
+
 </section>
 	<footer>
 		<h5>Cancun Quintana Roo. Bestbus</h5>
