--- a/00/index.html
+++ b/00/index.html
@@ -19,11 +19,11 @@
 		</figure>
 		<nav id="menu">
 			<ul>
-				<li><a href="#uno">Inicio</a></li>
-				<li><a href="#home">Bestbus</a></li>
-				<li><a href="#gale">Galeria</a></li>
-				<li><a href="#clientes">Clientes</a></li>
-				<li><a href="#carta">Contacto</a></li>
+				<li><a href="javascript:$.scrollTo('#uno',800);">Inicio</a></li>
+				<li><a href="javascript:$.scrollTo('#home',800);">Bestbus</a></li>
+				<li><a href="javascript:$.scrollTo('#gale',800);">Galeria</a></li>
+				<li><a href="javascript:$.scrollTo('#clientes',800);">Clientes</a></li>
+				<li><a href="javascript:$.scrollTo('#carta',800);">Contacto</a></li>
 			</ul>
 			</nav>
 	</header>
@@ -59,12 +59,6 @@
 				<p class="parrafo"> 
 				Nos enfocamos al Transporte de Personal, la relacion de mas de 10 años con algunos de nuestros clientes avalan nuestra calidad y buen servicio, ademas de esto, contamos con unidades adptadas para servicio turístico, por lo que será fácil satisfacer sus necesidades.
 			</p>
-			<div id="autobus">
-				<figure>
-					<figcaption>Transporte de Personal.</figcaption>
-					<img id="mueve"src="img/autobus.png">
-				</figure>
-			</div>
 				<p class="parrafo">
 				Nuestra misión es brindar un servicio de trasporte seguro, cómodo, eficiente y cordial que satisfaga cada vez mejor las expectativas de nuestros clientes y que, con ello todo nuestro personal tenga acceso a una mejor calidad de vida, repercutiendo que los accionistas tengan una mayor rentabilidad de su inversión, a la comunidad y el turismo que nos visita, un medio que ayude hacer más agradable su  estadía y  vida cotidiana.
 			</p>
@@ -149,6 +143,7 @@
 		</div>
 	</footer>
 	<script src="js/jquery.js"></script>
+	<script src="js/scrollTo.js"></script>
 	<script src="js/responsiveslides.js"></script>
 	<script src="js/funciones.js" ></script>
 </body>
