--- a/00/index.html
+++ b/00/index.html
@@ -13,13 +13,15 @@
 	<script type="text/javascript" src="js/modernizr.js"></script>
 </head>
 <body>
+	<div id="inicio">x</div>
 	<header>
 		<figure>
 			<img src="img/bestbus.jpg">
 		</figure>
+		
 		<nav id="menu">
 			<ul>
-				<li><a href="javascript:$.scrollTo('#uno',700);">Inicio</a></li>
+				<li><a href="javascript:$.scrollTo('#inicio',700);">Inicio</a></li>
 				<li><a href="javascript:$.scrollTo('#home',700);">Bestbus</a></li>
 				<li><a href="javascript:$.scrollTo('#gale',700);">Galeria</a></li>
 				<li><a href="javascript:$.scrollTo('#clientes',700);">Clientes</a></li>
