--- a/00/index.html
+++ b/00/index.html
@@ -22,7 +22,7 @@
 		<nav id="menu">
 			<ul>
 				<li><a href="javascript:$.scrollTo('#inicio',700);">Inicio</a></li>
-				<li><a href="javascript:$.scrollTo('#n1',700);">Bestbus</a></li>
+				<li><a href="javascript:$.scrollTo('#home',700);">Bestbus</a></li>
 				<li><a href="javascript:$.scrollTo('#gale',700);">Galeria</a></li>
 				<li><a href="javascript:$.scrollTo('#clientes',700);">Clientes</a></li>
 				<li><a href="javascript:$.scrollTo('#carta',700);">Contacto</a></li>
