--- a/00/index.html
+++ b/00/index.html
@@ -55,16 +55,21 @@
 	</div>
 		<h2 id="home">Bestbus</h2>
 		<section  class="cuadro">
-			<p class="parrafo"> 
+			<p class="parrafo">
+				<span>Historia</span><br>
 				Best Bus es la línea de transporte de personal de Grupo Turicún,nacimos con Cancún y hemos crecido a la par de su desarrollo.
 			</p>
-				<p class="parrafo"> 
+				<p class="parrafo">
+					<span>Que hacemos?</span><br>
 				Nos enfocamos al Transporte de Personal, la relacion de mas de 10 años con algunos de nuestros clientes avalan nuestra calidad y buen servicio, ademas de esto, contamos con unidades adptadas para servicio turístico, por lo que será fácil satisfacer sus necesidades.
 			</p>
+
 				<p class="parrafo">
+				<span>Misión</span><br>
 				Nuestra misión es brindar un servicio de trasporte seguro, cómodo, eficiente y cordial que satisfaga cada vez mejor las expectativas de nuestros clientes y que, con ello todo nuestro personal tenga acceso a una mejor calidad de vida, repercutiendo que los accionistas tengan una mayor rentabilidad de su inversión, a la comunidad y el turismo que nos visita, un medio que ayude hacer más agradable su  estadía y  vida cotidiana.
 			</p>
 				<p class="parrafo">
+					<span>Visión</span><br>
 				La visión  que tenemos es ser una empresa líder en el transporte de servicios turísticos y transporte de personal, y en servicios especiales en el mercado  interno, teniendo los autobuses de vanguardia y así, cumplir con los  requerimientos y necesidades de nuestros clientes.
 			</p>
 		</section>
@@ -87,10 +92,8 @@
 					</div>
 					<div class="galeria">
 						<img src="img/6.jpg" alt="image1"/>
-					</div>
-				
-		</section>
-		
+					</div>	
+		</section>	
 	<h2>Clientes</h2>
 	<section id="clientes" class="cuadro">
 		<div class="cliente"><img src="img/c1.jpg"></div>
