--- a/00/index.html
+++ b/00/index.html
@@ -61,7 +61,7 @@
 			</p>
 				<p class="parrafo">
 					<span>Que hacemos?</span><br>
-				Nos enfocamos al Transporte de Personal, la relacion de mas de 10 años con algunos de nuestros clientes avalan nuestra calidad y buen servicio, ademas de esto, contamos con unidades adptadas para servicio turístico, por lo que será fácil satisfacer sus necesidades.
+				Nos enfocamos al Transporte de Personal, la relacion de mas de 10 años con algunos de nuestros clientes avalan nuestra calidad y buen servicio, ademas de esto, contamos con unidades adaptadas para servicio turístico, por lo que será fácil satisfacer sus necesidades.
 			</p>
 
 				<p class="parrafo">
@@ -94,8 +94,8 @@
 						<img src="img/6.jpg" alt="image1"/>
 					</div>	
 		</section>	
-	<h2>Clientes</h2>
-	<section id="clientes" class="cuadro">
+	<h2 id="clientes">Clientes</h2>
+	<section  class="cuadro">
 		<div class="cliente"><img src="img/c1.jpg"></div>
 		<div class="cliente"><img src="img/c2.jpg"></div>
 		<div class="cliente"><img src="img/c3.jpg"></div>
@@ -111,8 +111,8 @@
 
 	</section>
 
-	<h2>Contacto</h2>
-	<section id="carta" class="clientes">
+	<h2 id="carta" >Contacto</h2>
+	<section  class="clientes">
 	<form  class="contact_form" action="#" method="post">
     <ul  class="contacto">
         <li>
