--- a/beneficios.html
+++ b/beneficios.html
@@ -43,6 +43,8 @@
 				<h4>Disminuye el uso de efectivo</h4>
 				<p>Con este sistema de pago puedes prevenir tu presupuesto de la semana o del mes, organizando tus gastos incluso de toda tu familia.</p>
 				<p>Sera una manera rapida de pagar tu pasaje, ya que este sistema reduce la velocidad de cobro hasta 30%.</p>
+				<p>Con este sistema de pago puedes prevenir tu presupuesto de la semana o del mes, organizando tus gastos incluso de toda tu familia.</p>
+				<p>Sera una manera rapida de pagar tu pasaje, ya que este sistema reduce la velocidad de cobro hasta 30%.</p>
 				<figure>
 				<img id="monedas" src="img/coins.png" alt=""/>
 			</figure>
