Nueva seccion Tarjetas

--- a/contacto.html
+++ b/contacto.html
@@ -30,6 +30,7 @@
 					<li><a href="beneficios.html">BENEFICIOS</a></li>
 					<li><a href="preguntas.html">PREGUNTAS</a></li>
 					<li><a href="contacto.html">CONTACTO</a></li>
+					<li><a href="tipos.html">TARJETAS</a></li>
 				</ul>
 			</nav>
 		</header>
