--- a/tipos.html
+++ b/tipos.html
@@ -36,25 +36,17 @@
 		</header>
 	<figure>
 		<a href="index.html"><img id="logo" src="img/logo.png"></a>
-		<h2 class="bene">Beneficios</h2>
+		<h2 class="bene">Tipos de Tarjetas</h2>
 	</figure>
 		<section class="benefis">
-			<article>
-				<h2>Administra tus gastos</h2>
-				<h4>Disminuye el uso de efectivo</h4>
-				<p>Con este sistema de pago puedes prevenir tu presupuesto de la semana o del mes, organizando tus gastos incluso de toda tu familia.</p>
-				<p>Sera una manera rapida de pagar tu pasaje, ya que este sistema reduce la velocidad de cobro hasta 30%.</p>
-				<p>Con este sistema de pago puedes prevenir tu presupuesto de la semana o del mes, organizando tus gastos incluso de toda tu familia.</p>
-				<p>Sera una manera rapida de pagar tu pasaje, ya que este sistema reduce la velocidad de cobro hasta 30%.</p>
-				<figure>
-				<img id="monedas" src="img/coins.png" alt=""/>
-			</figure>
-					<ul class="beneficios">
-						<li>Segura</li>
-						<li>Practica</li>
-						<li>Cobro exacto</li>
-						<li>Tarifas preferentes</li>
-					</ul>
+			<article class="lastarjetas"><p>Tercera Edad: Esta tarjeta se emitirá en coordinacion con el DIF y proporcionara sus beneficios unicamente a las personas que esten inscritas al programa INAPAM.</p>
+			</article>
+			<article class="lastarjetas"><p>Estudiantes: Se proporcionara en coordinacion con la CONFEQ y tendra un costo por viaje de $3.00 Pesos M.N. exclusivamente en Zona Urbana de Lunes a Viernes en periodos escolares.</p></article>
+			<article class="lastarjetas"><p>Colaboradores: Uso exclusivo de los empleados de Turicun.</p></article>
+			<article class="lastarjetas">
+			<p>
+				GENERAL:
+				Tarjeta para todo tipo de usuario, y la unica con la que podrás pagar las veces que necesites dentro de la misma unidad. Adquirela en tu centro de emision.</p>
 			</article>
 		</section>
 	<footer><h5>Movicun 2013, Cancún Quintana Roo, México.</h5></footer>
