Tipos de tarjetas

--- a/tipos.html
+++ b/tipos.html
@@ -39,14 +39,44 @@
 		<h2 class="bene">Tipos de Tarjetas</h2>
 	</figure>
 		<section class="benefis">
-			<article class="lastarjetas"><p>Tercera Edad: Esta tarjeta se emitirá en coordinacion con el DIF y proporcionara sus beneficios unicamente a las personas que esten inscritas al programa INAPAM.</p>
-			</article>
-			<article class="lastarjetas"><p>Estudiantes: Se proporcionara en coordinacion con la CONFEQ y tendra un costo por viaje de $3.00 Pesos M.N. exclusivamente en Zona Urbana de Lunes a Viernes en periodos escolares.</p></article>
-			<article class="lastarjetas"><p>Colaboradores: Uso exclusivo de los empleados de Turicun.</p></article>
 			<article class="lastarjetas">
-			<p>
-				GENERAL:
-				Tarjeta para todo tipo de usuario, y la unica con la que podrás pagar las veces que necesites dentro de la misma unidad. Adquirela en tu centro de emision.</p>
+			<p>Tercera Edad: Esta tarjeta se emitirá en coordinacion con el DIF y proporcionara sus beneficios unicamente a las personas que esten inscritas al programa INAPAM.
+			<img src="img/tarjetainfo.jpg" alt="">
+			</p>
+					<li>Requisitos:</li>
+					<li>Requisito</li>
+					<li>Requisito</li>
+					<li>Requisito</li>
+						
+			</article>
+			<article class="lastarjetas">
+			<p>Estudiantes: Se proporcionara en coordinacion con la CONFEQ y tendra un costo por viaje de $3.00 Pesos M.N. exclusivamente en Zona Urbana de Lunes a Viernes en periodos escolares.
+			<img src="img/tarjetainfo.jpg" alt="">
+			</p>
+					<li>Requisitos:</li>
+					<li>Requisito</li>
+					<li>Requisito</li>
+					<li>Requisito</li>
+						
+			</article>
+			<article class="lastarjetas">
+			<p>Colaboradores: Uso exclusivo de los empleados de Turicun.
+			<img src="img/tarjetainfo.jpg" alt="">
+			</p>
+					<li>Requisitos:</li>
+					<li>Requisito</li>
+					<li>Requisito</li>
+					<li>Requisito</li>			
+			</article>
+			<article class="lastarjetas">
+			<p>GENERAL:
+				Tarjeta para todo tipo de usuario, y la unica con la que podrás pagar las veces que necesites dentro de la misma unidad. Adquirela en tu centro de emision.
+			<img src="img/tarjetainfo.jpg" alt="">
+			</p>
+					<li>Requisitos:</li>
+					<li>Requisito</li>
+					<li>Requisito</li>
+					<li>Requisito</li>			
 			</article>
 		</section>
 	<footer><h5>Movicun 2013, Cancún Quintana Roo, México.</h5></footer>
