--- a/tipos.html
+++ b/tipos.html
@@ -28,7 +28,7 @@
 				<ul>
 					<li><a href="index.html">INICIO</a></li>
 					<li><a href="beneficios.html">BENEFICIOS</a></li>
-					<li><a href="preguntas.html">PREGUNTAS</a></li>
+					<li><a href="preguntas.html">DUDAS</a></li>
 					<li><a href="contacto.html">CONTACTO</a></li>
 					<li><a href="tipos.html">TARJETAS</a></li>
 				</ul>
@@ -44,9 +44,9 @@
 			<img src="img/tarjetainfo.jpg" alt="">
 			</p>
 					<li>Requisitos:</li>
-					<li>Requisito</li>
-					<li>Requisito</li>
-					<li>Requisito</li>
+					<li>Requisito 1</li>
+					<li>Requisito 2</li>
+					<li>Requisito 3</li>
 						
 			</article>
 			<article class="lastarjetas">
@@ -54,9 +54,9 @@
 			<img src="img/tarjetainfo.jpg" alt="">
 			</p>
 					<li>Requisitos:</li>
-					<li>Requisito</li>
-					<li>Requisito</li>
-					<li>Requisito</li>
+					<li>Requisito 1</li>
+					<li>Requisito 2</li>
+					<li>Requisito 3</li>
 						
 			</article>
 			<article class="lastarjetas">
@@ -64,9 +64,9 @@
 			<img src="img/tarjetainfo.jpg" alt="">
 			</p>
 					<li>Requisitos:</li>
-					<li>Requisito</li>
-					<li>Requisito</li>
-					<li>Requisito</li>			
+					<li>Requisito 1</li>
+					<li>Requisito 2</li>
+					<li>Requisito 3</li>			
 			</article>
 			<article class="lastarjetas">
 			<p>GENERAL:
@@ -74,9 +74,9 @@
 			<img src="img/tarjetainfo.jpg" alt="">
 			</p>
 					<li>Requisitos:</li>
-					<li>Requisito</li>
-					<li>Requisito</li>
-					<li>Requisito</li>			
+					<li>Requisito 1</li>
+					<li>Requisito 2</li>
+					<li>Requisito 3</li>			
 			</article>
 		</section>
 	<footer><h5>Movicun 2013, Cancún Quintana Roo, México.</h5></footer>
