--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 		<header>
 			<nav>
 				<ul>
-					<li><a href="index.html">INICIO</a></li>
+						<li><a href="index.html">INICIO</a></li>
 					<li><a href="beneficios.html">BENEFICIOS</a></li>
-					<li><a href="preguntas.html">PREGUNTAS</a></li>
+					<li><a href="preguntas.html">DUDAS</a></li>
 					<li><a href="contacto.html">CONTACTO</a></li>
 					<li><a href="tipos.html">TARJETAS</a></li>
 				</ul>
