Formulario contacto y tarjetas

--- a/contacto.html
+++ b/contacto.html
@@ -36,13 +36,11 @@
 		</header>
 	<figure>
 		<a href="index.html"><img id="logo" src="img/logo.png"></a>
+		<h2 class="bene">Contacto</h2>
 	</figure>
 	
 	<form class="contact_form" action="contacto.php" method="post">
     <ul>
-        <li>
-             <h2>Contáctanos</h2>
-        </li>
         <li>
             <label for="name">Nombre:</label>
             <input name="nombre" type="text" required id="nombre"  placeholder="Ingresa tu nombre" />
