--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 			</figure></a>
 			<input id="superior"type="text" placeholder="Ingresa tu duda">
 		</section>
-		<header>
+		<headesr>
 			<nav>
 				<ul>
-						<li><a href="index.html">INICIO</a></li>
+					<li><a href="index.html">INICIO</a></li>
 					<li><a href="beneficios.html">BENEFICIOS</a></li>
 					<li><a href="preguntas.html">DUDAS</a></li>
 					<li><a href="contacto.html">CONTACTO</a></li>
@@ -73,9 +73,10 @@
   ga('create', 'UA-48396479-1', 'faustinoloeza.github.io');
   ga('send', 'pageview');
 </script>
+		
+		<script src="js/jquery.js"></script>
 		<script src="js/jquery.roundabout.js"></script>
 		<script src="js/jquery.roundabout-shapes.js"></script>
-		<script src="js/jquery.js"></script>
 		<script src="js/funciones.js"></script>
 	</body>
 </html>
