Compostura de tamaños

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			</figure></a>
 			<input id="superior"type="text" placeholder="Ingresa tu duda">
 		</section>
-		<headesr>
+		<header>
 			<nav>
 				<ul>
 					<li><a href="index.html">INICIO</a></li>
