--- a/tipos.html
+++ b/tipos.html
@@ -43,11 +43,12 @@
 			<p>Tercera Edad: Esta tarjeta se emitirá en coordinacion con el DIF y proporcionara sus beneficios unicamente a las personas que esten inscritas al programa INAPAM.
 			<img src="img/tarjetainfo.jpg" alt="">
 			</p>
-					<li>Requisitos:</li>
-					<li>Requisito 1</li>
-					<li>Requisito 2</li>
-					<li>Requisito 3</li>
-						
+
+			<div id="requis">
+				<li>Requisito 1</li>
+				<li>Requisito 2</li>
+				<li>Requisito 3</li>
+			</div>
 			</article>
 			<article class="lastarjetas">
 			<p>Estudiantes: Se proporcionara en coordinacion con la CONFEQ y tendra un costo por viaje de $3.00 Pesos M.N. exclusivamente en Zona Urbana de Lunes a Viernes en periodos escolares.
@@ -63,6 +64,7 @@
 			<p>Colaboradores: Uso exclusivo de los empleados de Turicun.
 			<img src="img/tarjetainfo.jpg" alt="">
 			</p>
+
 					<li>Requisitos:</li>
 					<li>Requisito 1</li>
 					<li>Requisito 2</li>
