--- a/preguntas.html
+++ b/preguntas.html
@@ -38,8 +38,9 @@
 		<a href="index.html"><img id="logo" src="img/logo.png"></a>
 		<h2 class="bene">Preguntas</h2>
 	</figure>
-	
+	<img id="dus"src="img/dus.jpg" alt="">
 	<section>
+
 		<article class="preguntas">
 					<h3 class="usoletra">¿Tiene algun costo la tarjeta?</h3>
 						<p>Si la recarga es de 100 pesos la tarjeta es de regalo. Si es menor, a esta cantidad tendra un costo de $20 pesos.</p>
