Agregado de map

--- a/00/index.html
+++ b/00/index.html
@@ -137,7 +137,7 @@
 	<p>Dirección: Av 20 de Noviembre Mz 5 Lt 6 SM 77, Cancún, Q Roo. México</p>
 </form>
 
-	<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3720.0298533847604!2d-86.82042700000001!3d21.190973!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2smx!4v1394555862136" width="600" height="450" frameborder="0" style="border:0"></iframe>
+	<iframe src="https://www.google.com/maps/embed?pb=!1m22!1m12!1m3!1d1860.0040107451835!2d-86.82057864912404!3d21.19184030324826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m7!1i0!3e6!4m0!4m3!3m2!1d21.1909775!2d-86.8203077!5e0!3m2!1ses-419!2smx!4v1395255750022" width="600" height="450" frameborder="0" style="border:0"></iframe>
 
 </section>
 	<footer>
