--- a/contacto.html
+++ b/contacto.html
@@ -38,7 +38,6 @@
 		<a href="index.html"><img id="logo" src="img/logo.png"></a>
 		<h2 class="bene">Contacto</h2>
 	</figure>
-	
 	<form class="contact_form" action="contacto.php" method="post">
     <ul>
         <li>
@@ -57,6 +56,7 @@
         	<button class="submit" type="submit">Enviar</button>
         </li>
     </ul>
+    <img id="conta" src="img/conta.jpg" alt="">
 </form>
 	<footer><h5>Movicun 2013, Cancún Quintana Roo, México.</h5></footer>
 		<script src="js/jquery.js"></script>
