--- a/00/index.html
+++ b/00/index.html
@@ -77,18 +77,58 @@
 	<section id="galeria" class="cuadro">
 					<div class="galeria">
 						<img src="img/1.jpg" alt="image1"/>
+						<ol>
+							<p>Caracteristicas</p>
+							<li> N Asientos reclinables</li>
+							<li>Sistema de aire acondicionado</li>
+							<li> Sanitario</li>
+							<li>Salida de emergencia</li>
+							<li>Luz de lectura individual</li>
+						</ol>
 					</div>
 					<div class="galeria">
 						<img src="img/2.jpg" alt="image2"/>
+						<ol>
+							<p>Caracteristicas</p>
+							<li> N Asientos reclinables</li>
+							<li>Sistema de aire acondicionado</li>
+							<li> Sanitario</li>
+							<li>Salida de emergencia</li>
+							<li>Luz de lectura individual</li>
+						</ol>
 					</div>
 					<div class="galeria">
 						<img src="img/3.jpg" alt="image1"/>
+						<ol>
+							<p>Caracteristicas</p>
+							<li> N Asientos reclinables</li>
+							<li>Sistema de aire acondicionado</li>
+							<li> Sanitario</li>
+							<li>Salida de emergencia</li>
+							<li>Luz de lectura individual</li>
+						</ol>
 					</div>
 					<div class="galeria">
 						<img src="img/4.jpg" alt="image1"/>
+						<ol>
+							<p>Caracteristicas</p>
+							<li> N Asientos reclinables</li>
+							<li>Sistema de aire acondicionado</li>
+							<li> Sanitario</li>
+							<li>Salida de emergencia</li>
+							<li>Luz de lectura individual</li>
+						</ol>
 					</div>
 					<div class="galeria">
 						<img src="img/5.jpg" alt="image1"/>
+						<ol>
+							<p>Caracteristicas</p>
+							<li> N Asientos reclinables</li>
+							<li>Sistema de aire acondicionado</li>
+							<li> Sanitario</li>
+							<li>Salida de emergencia</li>
+							<li>Luz de lectura individual</li>
+						</ol>
 					</div>
 					<div class="galeria">
 						<img src="img/6.jpg" alt="image1"/>
@@ -132,9 +172,12 @@
         </li>
     </ul>
     <h3>Si te interesan nuestros servicios para tu negocio, escríbenos, llámanos o visítanos. Nos pondremos en contacto lo más pronto posible.</h3>
-    <p>Telefono:(998) 884.4235</p>
-	<p>Correo: soporte@bestbus.com.mx</p>
-	<p>Dirección: Av 20 de Noviembre Mz 5 Lt 6 SM 77, Cancún, Q Roo. México</p>
+    <ol>
+    	<li>Telefono:(998) 884.4235</li>
+    	<li>Correo: soporte@bestbus.com.mx</li>
+    	<li>Dirección: Av 20 de Noviembre Mz 5 Lt 6 SM 77, Cancún, Q Roo. México</li>
+    </ol>
+
 </form>
 
 	<iframe src="https://www.google.com/maps/embed?pb=!1m22!1m12!1m3!1d1860.0040107451835!2d-86.82057864912404!3d21.19184030324826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m7!1i0!3e6!4m0!4m3!3m2!1d21.1909775!2d-86.8203077!5e0!3m2!1ses-419!2smx!4v1395255750022" width="600" height="450" frameborder="0" style="border:0"></iframe>
