--- a/00/index.html
+++ b/00/index.html
@@ -53,6 +53,11 @@
 		    </li>
 		  </ul>
 	</div>
+	<div>
+		<button id="pri">UNO</button>
+		<button id="go">DOS</button>
+		<button id="ga">TRES</button>
+	</div>
 		<h2 id="home">Bestbus</h2>
 		<section  class="cuadro">
 			<p class="parrafo">
