--- a/00/index.html
+++ b/00/index.html
@@ -197,7 +197,7 @@
 		</div>
 	</footer>
 	<script src="js/jquery.js"></script>
-	<script src="js/scrollTo.js"></script>
+	<script src="js/jquerylocal.js"></script>
 	<script src="js/responsiveslides.js"></script>
 	<script src="js/funciones.js" ></script>
 </body>
