--- a/00/index.html
+++ b/00/index.html
@@ -3,7 +3,6 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html lang="es" class="no-js"> <!--<![endif]-->
-<!--Faustino-->
 <head>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
@@ -81,59 +80,76 @@
 		</section>
 	<h2 id="gale">Galeria</h2>
 	<section id="galeria" class="cuadro">
-					<div class="galeria">
-						<img src="img/1.jpg" alt="image1"/>
+				<div class="galeria">
+						<img src="img/7.jpg" alt="image1"/>
 						<ol>
 							<p>Caracteristicas</p>
-							<li> N Asientos reclinables</li>
+							<li> 43 Pasajeros</li>
 							<li>Sistema de aire acondicionado</li>
 							<li> Sanitario</li>
 							<li>Salida de emergencia</li>
 							<li>Luz de lectura individual</li>
+							<li>Modelo: 2010</li>							
+						</ol>
+					</div>
+					<div class="galeria">
+						<img src="img/1.jpg" alt="image1"/>
+						<ol>
+							<p>Caracteristicas</p>
+							<li> 43 Pasajeros</li>
+							<li>Sistema de aire acondicionado</li>
+							<li> Sanitario</li>
+							<li>Salida de emergencia</li>
+							<li>Luz de lectura individual</li>
+							<li>Modelo: 2010</li>							
 						</ol>
 					</div>
 					<div class="galeria">
 						<img src="img/2.jpg" alt="image2"/>
 						<ol>
 							<p>Caracteristicas</p>
-							<li> N Asientos reclinables</li>
+							<li> 47 Pasajeros</li>
 							<li>Sistema de aire acondicionado</li>
 							<li> Sanitario</li>
 							<li>Salida de emergencia</li>
 							<li>Luz de lectura individual</li>
+							<li>Modelo: 2011</li>								
 						</ol>
 					</div>
 					<div class="galeria">
 						<img src="img/3.jpg" alt="image1"/>
 						<ol>
 							<p>Caracteristicas</p>
-							<li> N Asientos reclinables</li>
+							<li> 45 Pasajeros</li>
 							<li>Sistema de aire acondicionado</li>
 							<li> Sanitario</li>
 							<li>Salida de emergencia</li>
 							<li>Luz de lectura individual</li>
+							<li>Modelo: 2013</li>
 						</ol>
 					</div>
 					<div class="galeria">
 						<img src="img/4.jpg" alt="image1"/>
 						<ol>
 							<p>Caracteristicas</p>
-							<li> N Asientos reclinables</li>
+							<li> 43 Pasajeros</li>
 							<li>Sistema de aire acondicionado</li>
 							<li> Sanitario</li>
 							<li>Salida de emergencia</li>
 							<li>Luz de lectura individual</li>
+							<li>Modelo: 2014</li>
 						</ol>
 					</div>
 					<div class="galeria">
 						<img src="img/5.jpg" alt="image1"/>
 						<ol>
 							<p>Caracteristicas</p>
-							<li> N Asientos reclinables</li>
+							<li> 47 Pasajeros</li>
 							<li>Sistema de aire acondicionado</li>
 							<li> Sanitario</li>
 							<li>Salida de emergencia</li>
 							<li>Luz de lectura individual</li>
+							<li>Modelo: 2014</li>
 						</ol>
 					</div>
 					<div class="galeria">
