nuevas images y contenido

--- a/00/index.html
+++ b/00/index.html
@@ -62,21 +62,36 @@
 		<section  class="cuadro">
 			<p class="parrafo">
 				<span>Historia</span><br>
-				Best Bus es la línea de transporte de personal de Grupo Turicún,nacimos con Cancún y hemos crecido a la par de su desarrollo.
+				Best Bus , se creó como una empresa que ofrece servicios de  transporte de personal ,  servicios especiales y tours, para el sector Hotelero, agencias de viajes  y Público en General , locales y Foráneos.
+				Viendo las necesidades específicas de nuestros clientes  para los diferentes sectores, en Best Bus ofrecemos  soluciones  a sus servicios con Puntualidad, Seguridad, Confianza, Amabilidad, rentabilidad y Buen trato.
+
 			</p>
-				<p class="parrafo">
+			<p class="parrafo">
 					<span>Que hacemos?</span><br>
 				Nos enfocamos al Transporte de Personal, la relacion de mas de 10 años con algunos de nuestros clientes avalan nuestra calidad y buen servicio, ademas de esto, contamos con unidades adaptadas para servicio turístico, por lo que será fácil satisfacer sus necesidades.
 			</p>
 
-				<p class="parrafo">
+			<p class="parrafo">
 				<span>Misión</span><br>
-				Nuestra misión es brindar un servicio de trasporte seguro, cómodo, eficiente y cordial que satisfaga cada vez mejor las expectativas de nuestros clientes y que, con ello todo nuestro personal tenga acceso a una mejor calidad de vida, repercutiendo que los accionistas tengan una mayor rentabilidad de su inversión, a la comunidad y el turismo que nos visita, un medio que ayude hacer más agradable su  estadía y  vida cotidiana.
+				Proveer Soluciones de Transportación a nuestros Clientes con puntualidad, seguridad, amabilidad, confianza y rentabilidad para que a través de nuestros servicios su recurso humano se sienta satisfecho.
 			</p>
-				<p class="parrafo">
+			<p class="parrafo">
 					<span>Visión</span><br>
-				La visión  que tenemos es ser una empresa líder en el transporte de servicios turísticos y transporte de personal, y en servicios especiales en el mercado  interno, teniendo los autobuses de vanguardia y así, cumplir con los  requerimientos y necesidades de nuestros clientes.
+				Ser una empresa Líder en servicios especiales, tours y transporte de personal Manteniéndonos a la vanguardia del desarrollo local y mundial mediante propuestas de soluciones personalizadas acorde a las necesidades de nuestros clientes.
 			</p>
+			<p class="parrafo">
+					<span>Política de Calidad Best Bus</span><br>
+				Nuestro Compromiso al ofrecer Servicios especiales, tours y transporte de personal, es proveer la satisfacción total de nuestros clientes a través de nuestros autobuses y personal capacitado brindandoles transporte con puntualidad, seguridad, buen trato y con la confianza de llegar a su destino programado. 
+			</p>
+			<ol>	<p>Nuestros Valores.</p>
+					<li>Seguridad.</li>
+					<li>Puntualidad.</li>
+					<li>Amabilidad.</li>
+					<li>Rentabilidad.</li>
+					<li>Honestidad.</li>
+					<li>Confianza.</li>
+					<li>Pasión por servir.</li>
+				</ol>
 		</section>
 	<h2 id="gale">Galeria</h2>
 	<section id="galeria" class="cuadro">
@@ -93,7 +108,7 @@
 						</ol>
 					</div>
 					<div class="galeria">
-						<img src="img/1.jpg" alt="image1"/>
+						<img src="img/11.jpg" alt="image1"/>
 						<ol>
 							<p>Caracteristicas</p>
 							<li> 43 Pasajeros</li>
@@ -105,7 +120,7 @@
 						</ol>
 					</div>
 					<div class="galeria">
-						<img src="img/2.jpg" alt="image2"/>
+						<img src="img/21.jpg" alt="image2"/>
 						<ol>
 							<p>Caracteristicas</p>
 							<li> 47 Pasajeros</li>
@@ -117,7 +132,7 @@
 						</ol>
 					</div>
 					<div class="galeria">
-						<img src="img/3.jpg" alt="image1"/>
+						<img src="img/31.jpg" alt="image1"/>
 						<ol>
 							<p>Caracteristicas</p>
 							<li> 45 Pasajeros</li>
@@ -129,7 +144,7 @@
 						</ol>
 					</div>
 					<div class="galeria">
-						<img src="img/4.jpg" alt="image1"/>
+						<img src="img/41.jpg" alt="image1"/>
 						<ol>
 							<p>Caracteristicas</p>
 							<li> 43 Pasajeros</li>
@@ -141,7 +156,7 @@
 						</ol>
 					</div>
 					<div class="galeria">
-						<img src="img/5.jpg" alt="image1"/>
+						<img src="img/51.jpg" alt="image1"/>
 						<ol>
 							<p>Caracteristicas</p>
 							<li> 47 Pasajeros</li>
