--- a/tipos.html
+++ b/tipos.html
@@ -40,45 +40,45 @@
 	</figure>
 		<section class="benefis">
 			<article class="lastarjetas">
-			<p>Tercera Edad: Esta tarjeta se emitirá en coordinacion con el DIF y proporcionara sus beneficios unicamente a las personas que esten inscritas al programa INAPAM.
-			<img src="img/tarjetainfo.jpg" alt="">
+			<p>Adulto mayor: La tarjeta Movicun de adulto mayor(personas mayores de 60 años) es gratuita.
+				<br>
+				*La tarjeta es necesaría para hacer valida la tarifa con descuento.<br>
+				*La tarjeta es personal.<br>
+				*El tramite es personal.
+			
 			</p>
 
 			<div id="requis">
-				<li>Requisito 1</li>
-				<li>Requisito 2</li>
-				<li>Requisito 3</li>
+				<li>Credencial vigente del INSEN</li>
+				<li>Identificación oficial con fotografía.</li>
+				<li>Vigencía: Revalidar cada X años.</li>
 			</div>
 			</article>
 			<article class="lastarjetas">
-			<p>Estudiantes: Se proporcionara en coordinacion con la CONFEQ y tendra un costo por viaje de $3.00 Pesos M.N. exclusivamente en Zona Urbana de Lunes a Viernes en periodos escolares.
-			<img src="img/tarjetainfo.jpg" alt="">
+			<p>La tarjeta Movicun para estudiantes es gratuita, para los alumnos inscritos en planes educativos avalados por la SEP.<br>
+			*La tarjeta es necesaría para hacer valida la tarifa con descuento.<br>
+			*La tarjeta es personal.<br>
+			El tramite es personal(En el caso de menores acudir acompañados de un adulto).
 			</p>
-					<li>Requisitos:</li>
-					<li>Requisito 1</li>
-					<li>Requisito 2</li>
-					<li>Requisito 3</li>
+					<li>Constancía de estudio o comprobante de inscripción vigente.(Nombre completo, sello oficial de la escuela, ciclo escolar y firma del director).</li>
+					<li>Credencial oficial vigente con fotografía.</li>
+					<li>Vigencía:al inicío del ciclo escolar.</li>
+					<li>Curp.</li>	
 						
 			</article>
 			<article class="lastarjetas">
-			<p>Colaboradores: Uso exclusivo de los empleados de Turicun.
-			<img src="img/tarjetainfo.jpg" alt="">
-			</p>
-
-					<li>Requisitos:</li>
-					<li>Requisito 1</li>
-					<li>Requisito 2</li>
-					<li>Requisito 3</li>			
+			<p>Personas con capacidades diferentes:
+				*Es para personas que se encuentren en alguna situación de discapacidad avalada por el DIF.
+			</p>		
 			</article>
 			<article class="lastarjetas">
 			<p>GENERAL:
-				Tarjeta para todo tipo de usuario, y la unica con la que podrás pagar las veces que necesites dentro de la misma unidad. Adquirela en tu centro de emision.
-			<img src="img/tarjetainfo.jpg" alt="">
+				La tarjeta de uso general, la podras obtener en los puntos de recarga, el costo es de $20.00. si realizas una recarga de $100.00 la tarjeta es gratis.
+				Puedes hacer uso de la tarjeta en todos los autobuses de transporte publico Turicun.
 			</p>
-					<li>Requisitos:</li>
-					<li>Requisito 1</li>
-					<li>Requisito 2</li>
-					<li>Requisito 3</li>			
+					<li>Llevala siempre que uses el transporte publico.</li>
+					<li>Con esta tarjeta puedes realizar varios pagos a la vez.</li>
+					<li>No tiene vigencia.</li>		
 			</article>
 
 		</section>
