--- a/beneficios.html
+++ b/beneficios.html
@@ -50,17 +50,17 @@
 				<img id="monedas" src="img/coins.png" alt=""/>
 			</figure>
 					<ul class="beneficios">
-						<li>Sistema Moderno</li>
-						<li>Optimizacón de Transporte</li>
-						<li>Agilidad al ascenso de la unidad de transporte.</li>
-						<li>Control satelital en nuestras unidades</li>
-						<li>Ubicación del autobus en todo momento</li>
-						<li>Monitoreo de la velocidad</li>
-						<li>Cumplimiento de ruta en tiempo y forma</li>
 						<li>Segura</li>
 						<li>Practica</li>
 						<li>Cobro exacto</li>
+						<li>Sistema Moderno</li>
 						<li>Tarifas preferentes</li>
+						<li>Monitoreo de la velocidad</li>
+						<li>Optimizacón de Transporte</li>
+						<li>Control satelital en nuestras unidades</li>
+						<li>Ubicación del autobus en todo momento</li>
+						<li>Cumplimiento de ruta en tiempo y forma</li>
+						<li>Agilidad al ascenso de la unidad de transporte</li>
 					</ul>
 			</article>
 		</section>
