--- a/tipos.html
+++ b/tipos.html
@@ -39,52 +39,44 @@
 		<h2 class="bene">Tipos de Tarjetas</h2>
 	</figure>
 		<section class="benefis">
-			<article class="lastarjetas">
-			<p>Adulto mayor: La tarjeta Movicun de adulto mayor(personas mayores de 60 años) es gratuita.
-				<br>
-				*La tarjeta es necesaría para hacer valida la tarifa con descuento.<br>
-				*La tarjeta es personal.<br>
-				*El tramite es personal.
-			
-			</p>
-
-			<div id="requis">
-				<li>Credencial vigente del INSEN</li>
-				<li>Identificación oficial con fotografía.</li>
-				<li>Vigencía: Revalidar cada X años.</li>
+			<div class="flip" id="gen">
+				<p>General</p>
+				<p class="justi">
+					La tarjeta de uso general, la podras obtener en los puntos de recarga, el costo es de $20.00. si realizas una recarga de $100.00 la tarjeta es gratis.
+					Puedes hacer uso de la tarjeta en todos los autobuses de transporte publico Turicun.
+				</p>
+				<li>Podras hacer varios pagos con esta tarjeta.</li>
+				<li>No tiene vigencia.</li>
+				<li>Puedes recargar tu tarjeta en mas de X puntos de recargo.</li>
+				<li>Llevala siempre que uses el transporte publico.</li>
+				<button id="jjj">Requisitos</button>
 			</div>
-			</article>
-			<article class="lastarjetas">
-			<p>La tarjeta Movicun para estudiantes es gratuita, para los alumnos inscritos en planes educativos avalados por la SEP.<br>
-			*La tarjeta es necesaría para hacer valida la tarifa con descuento.<br>
-			*La tarjeta es personal.<br>
-			El tramite es personal(En el caso de menores acudir acompañados de un adulto).
-			</p>
-					<li>Constancía de estudio o comprobante de inscripción vigente.(Nombre completo, sello oficial de la escuela, ciclo escolar y firma del director).</li>
-					<li>Credencial oficial vigente con fotografía.</li>
-					<li>Vigencía:al inicío del ciclo escolar.</li>
-					<li>Curp.</li>	
-						
-			</article>
-			<article class="lastarjetas">
-			<p>Personas con capacidades diferentes:
-				*Es para personas que se encuentren en alguna situación de discapacidad avalada por el DIF.
-			</p>		
-			</article>
-			<article class="lastarjetas">
-			<p>GENERAL:
-				La tarjeta de uso general, la podras obtener en los puntos de recarga, el costo es de $20.00. si realizas una recarga de $100.00 la tarjeta es gratis.
-				Puedes hacer uso de la tarjeta en todos los autobuses de transporte publico Turicun.
-			</p>
-					<li>Llevala siempre que uses el transporte publico.</li>
-					<li>Con esta tarjeta puedes realizar varios pagos a la vez.</li>
-					<li>No tiene vigencia.</li>		
-			</article>
+			<div class="flip" id="adul">
+				<p>Adulto Mayor</p>
+				<p class="justi">La tarjeta Movicun de adulto mayor(personas mayores de 60 años) es gratuita.</p>
+				<li>La tarjeta es necesaría para hacer valida la tarifa con descuento.</li>
+				<li>La tarjeta es personal.</li>
+				<li>El tramite es personal.</li>
+				<button id="jjj">Requisitos</button>
+			</div>
+			<div class="flip" id="estu">
+				<p>Estudiante</p>
+				<p class="justi">La tarjeta Movicun para estudiantes es gratuita, para los alumnos inscritos en planes educativos avalados por la SEP.</p>
+				<li>La tarjeta es necesaría para hacer valida la tarifa con descuento.</li>
+				<li>La tarjeta es personal.</li>
+				<li>El tramite es personal(En el caso de menores acudir acompañados de un adulto).</li>
+				<button id="jjj">Requisitos</button>
+			</div>
+			<div class="flip" id="emple">
+				<p>Empleados Turicun</p>
+				<p>Uso exclusivo de los empleados de Turicun.</p>
+			</div>
 
 		</section>
 		
 	<footer><h5>Movicun 2013, Cancún Quintana Roo, México.</h5></footer>
-		<script src="js/jquery.js"></script>
+		<script src="js/jquery-1.10.1.min.js"></script>
 		<script src="js/funciones.js"></script>
+
 	</body>
 </html>
