--- a/tipos.html
+++ b/tipos.html
@@ -40,7 +40,7 @@
 	</figure>
 		<section class="benefis">
 			<div class="flip" id="gen">
-				<p>General</p>
+				<p class="centro">General</p>
 				<p class="justi">
 					La tarjeta de uso general, la podras obtener en los puntos de recarga, el costo es de $20.00. si realizas una recarga de $100.00 la tarjeta es gratis.
 					Puedes hacer uso de la tarjeta en todos los autobuses de transporte publico Turicun.
@@ -52,7 +52,7 @@
 				<button id="jjj">Requisitos</button>
 			</div>
 			<div class="flip" id="adul">
-				<p>Adulto Mayor</p>
+				<p class="centro">Adulto Mayor</p>
 				<p class="justi">La tarjeta Movicun de adulto mayor(personas mayores de 60 años) es gratuita.</p>
 				<li>La tarjeta es necesaría para hacer valida la tarifa con descuento.</li>
 				<li>La tarjeta es personal.</li>
@@ -60,7 +60,7 @@
 				<button id="jjj">Requisitos</button>
 			</div>
 			<div class="flip" id="estu">
-				<p>Estudiante</p>
+				<p class="centro">Estudiante</p>
 				<p class="justi">La tarjeta Movicun para estudiantes es gratuita, para los alumnos inscritos en planes educativos avalados por la SEP.</p>
 				<li>La tarjeta es necesaría para hacer valida la tarifa con descuento.</li>
 				<li>La tarjeta es personal.</li>
@@ -68,8 +68,8 @@
 				<button id="jjj">Requisitos</button>
 			</div>
 			<div class="flip" id="emple">
-				<p>Empleados Turicun</p>
-				<p>Uso exclusivo de los empleados de Turicun.</p>
+				<p class="centro">Empleados Turicun</p>
+				<p class="justi">Uso exclusivo de los empleados de Turicun.</p>
 			</div>
 
 		</section>
