--- a/tipos.html
+++ b/tipos.html
@@ -75,7 +75,7 @@
 		</section>
 		
 	<footer><h5>Movicun 2013, Cancún Quintana Roo, México.</h5></footer>
-		<script src="js/jquery-1.10.1.min.js"></script>
+		<script src="js/jquery.js"></script>
 		<script src="js/funciones.js"></script>
 
 	</body>
