--- a/00/index.html
+++ b/00/index.html
@@ -23,7 +23,7 @@
 			<ul>
 				<li><a href="javascript:$.scrollTo('#inicio',700);">Inicio</a></li>
 				<li><a href="javascript:$.scrollTo('#home',700);">Bestbus</a></li>
-				<li><a href="javascript:$.scrollTo('#gale',700);">Galeria</a></li>
+				<li><a href="javascript:$.scrollTo('#gale',700);">Galería</a></li>
 				<li><a href="javascript:$.scrollTo('#clientes',700);">Clientes</a></li>
 				<li><a href="javascript:$.scrollTo('#carta',700);">Contacto</a></li>
 			</ul>
@@ -68,7 +68,7 @@
 			</p>
 			<p class="parrafo">
 					<span>Que hacemos?</span><br>
-				Nos enfocamos al Transporte de Personal, la relacion de mas de 10 años con algunos de nuestros clientes avalan nuestra calidad y buen servicio, ademas de esto, contamos con unidades adaptadas para servicio turístico, por lo que será fácil satisfacer sus necesidades.
+					Nos enfocamos al Transporte de Personal, la relación de más de 10 años con algunos de nuestros clientes avalan nuestra calidad y buen servicio, además de esto, contamos con unidades adaptadas para servicio turístico, por lo que será fácil satisfacer sus necesidades.
 			</p>
 
 			<p class="parrafo">
@@ -81,7 +81,7 @@
 			</p>
 			<p class="parrafo">
 					<span>Política de Calidad Best Bus</span><br>
-				Nuestro Compromiso al ofrecer Servicios especiales, tours y transporte de personal, es proveer la satisfacción total de nuestros clientes a través de nuestros autobuses y personal capacitado brindandoles transporte con puntualidad, seguridad, buen trato y con la confianza de llegar a su destino programado. 
+				Nuestro Compromiso al ofrecer Servicios especiales, tours y transporte de personal, es proveer la satisfacción total de nuestros clientes a través de nuestros autobuses y personal capacitado brindándoles transporte con puntualidad, seguridad, buen trato y con la confianza de llegar a su destino programado. 
 			</p>
 			<ol>	<p>Nuestros Valores.</p>
 					<li>Seguridad.</li>
@@ -98,7 +98,7 @@
 				<div class="galeria">
 						<img src="img/7.jpg" alt="image1"/>
 						<ol>
-							<p>Caracteristicas</p>
+							<p>Características</p>
 							<li> 43 Pasajeros</li>
 							<li>Sistema de aire acondicionado</li>
 							<li> Sanitario</li>
@@ -110,7 +110,7 @@
 					<div class="galeria">
 						<img src="img/11.jpg" alt="image1"/>
 						<ol>
-							<p>Caracteristicas</p>
+							<p>Características</p>
 							<li> 43 Pasajeros</li>
 							<li>Sistema de aire acondicionado</li>
 							<li> Sanitario</li>
@@ -122,7 +122,7 @@
 					<div class="galeria">
 						<img src="img/21.jpg" alt="image2"/>
 						<ol>
-							<p>Caracteristicas</p>
+							<p>Características</p>
 							<li> 47 Pasajeros</li>
 							<li>Sistema de aire acondicionado</li>
 							<li> Sanitario</li>
@@ -134,7 +134,7 @@
 					<div class="galeria">
 						<img src="img/31.jpg" alt="image1"/>
 						<ol>
-							<p>Caracteristicas</p>
+							<p>Características</p>
 							<li> 45 Pasajeros</li>
 							<li>Sistema de aire acondicionado</li>
 							<li> Sanitario</li>
@@ -146,7 +146,7 @@
 					<div class="galeria">
 						<img src="img/41.jpg" alt="image1"/>
 						<ol>
-							<p>Caracteristicas</p>
+							<p>Características</p>
 							<li> 43 Pasajeros</li>
 							<li>Sistema de aire acondicionado</li>
 							<li> Sanitario</li>
@@ -158,7 +158,7 @@
 					<div class="galeria">
 						<img src="img/51.jpg" alt="image1"/>
 						<ol>
-							<p>Caracteristicas</p>
+							<p>Características</p>
 							<li> 47 Pasajeros</li>
 							<li>Sistema de aire acondicionado</li>
 							<li> Sanitario</li>
@@ -211,17 +211,16 @@
     <h3>Si te interesan nuestros servicios para tu negocio, escríbenos, llámanos o visítanos. Nos pondremos en contacto lo más pronto posible.</h3>
     <ol>
     	<li>Telefono:(998) 884.4235</li>
-    	<li>Correo: soporte@bestbus.com.mx</li>
+    	<li>Correo: contacto@bestbus.mx</li>
     	<li>Dirección: Av 20 de Noviembre Mz 5 Lt 6 SM 77, Cancún, Q Roo. México</li>
     </ol>
 
 </form>
-
-	<iframe src="https://www.google.com/maps/embed?pb=!1m22!1m12!1m3!1d1860.0040107451835!2d-86.82057864912404!3d21.19184030324826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m7!1i0!3e6!4m0!4m3!3m2!1d21.1909775!2d-86.8203077!5e0!3m2!1ses-419!2smx!4v1395255750022" width="600" height="450" frameborder="0" style="border:0"></iframe>
-
+	<iframe src="https://www.google.com/maps/embed?pb=!1m22!1m12!1m3!1d1860.0040107451835!2d-86.82057864912404!3d21.19184030324826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m7!1i0!3e6!4m0!4m3!3m2!1d21.1909775!2d-86.8203077!5e0!3m2!1ses-419!2smx!4v1395255750022" width="600" height="450" frameborder="0" style="border:0">	
+	</iframe>
 </section>
 	<footer>
-		<h5>Cancun Quintana Roo. Bestbus</h5>
+		<h5>Cancún Quintana Roo. Bestbus 2014</h5>
 		<div class="social">
 			<a href="https://www.youtube.com/" target="_blank"><img src="img/youtube.png" alt=""></a>
 			<a href="https://twitter.com/bestbuscancun" target="_blank"><img src="img/tui.png" alt=""></a>
