--- a/movicun2014/index.html
+++ b/movicun2014/index.html
@@ -4,8 +4,10 @@
 	<meta charset="utf-8">
 		<title>Movicun</title>
 		<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
+		<link rel="stylesheet"  href="css/normalize.css">
 		<link rel="stylesheet"  href="css/estilos.css">
-		<link rel="stylesheet"  href="css/normalize.css"></head>
+		
+		</head>
 <body>
 	<header>
 		<div id="barrasuperior">
