--- a/movicun2014/index.html
+++ b/movicun2014/index.html
@@ -6,7 +6,10 @@
 		<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
 		<link rel="stylesheet"  href="css/normalize.css">
 		<link rel="stylesheet"  href="css/estilos.css">
-		
+		<!--[if lt IE 9]>
+			<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
+			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+		<!endif]-->
 		</head>
 <body>
 	<header>
