--- a/movicun2014/index.html
+++ b/movicun2014/index.html
@@ -31,11 +31,16 @@
 			</nav>
 		</div>
 		</div>
+		<div id="logo">
+			<figure>
+				<img src="img/logo.png" alt="">
+			</figure>
+		</div>
 		<ul id="imagenes">
-				  		<li><img src="img/general.png" alt="">
-				  		<li><img src="img/terceraedad.png" alt="">
-				  		<li><img src="img/estudiante.png" alt="">
-				  		<li><img src="img/colaborador.png" alt="">
+				  		<li><img src="img/general.jpg" alt="">
+				  		<li><img src="img/terceraedad.jpg" alt="">
+				  		<li><img src="img/estudiante.jpg" alt="">
+				  		<li><img src="img/colaborador.jpg" alt="">
 				</ul>
 	</header>
 <script>
