movicun la nueva tarjeta

--- a/movicun2014/index.html
+++ b/movicun2014/index.html
@@ -34,6 +34,7 @@
 		<div id="logo">
 			<figure>
 				<img src="img/logo.png" alt="">
+				<h2>La nueva tarjeta prepago de transporte urbano.</h2>
 			</figure>
 		</div>
 		<ul id="imagenes">
